--- a/MobileSpeedCameraMap/index.html
+++ b/MobileSpeedCameraMap/index.html
@@ -17,7 +17,7 @@
     <div id="map"></div>
 
     <!-- Load the Google Maps JavaScript API -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCOTqh-VeaCA2i4XEkfd4UP5kPBme-yTnY&callback=initMap" async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=INSERT API KEY HERE&callback=initMap" async defer></script>
     <script src="script.js"></script>
     <style>
         /* Outer InfoWindow container */
@@ -46,4 +46,5 @@
         }
     </style>
 </body>
+
 </html>
